# noir-mip

./: .env.example  Cargo.toml  Nargo.toml  Prover.toml  README.md  Verifier.toml
src/: main.nr  main.rs
