[package]
name = "mip-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hex = "0.4.3"
rlp = "0.5.2"
serde = "1.0.188"
serde_json = "1.0.105"
tiny-keccak = "2.0.2"
tokio = "1.32.0"
web3 = "0.19.0"
